objectif align corrected

--- a/styles.scss
+++ b/styles.scss
@@ -365,13 +365,13 @@ body {
                     left: 0;
                     width:100%;
                     opacity:0;
+                    padding-bottom:5vw;
                     .profil {
                         left:10%;
                         position: relative;
                         height: 30vw;
                         width: 17vw;
                         opacity: 0.5;
-                        margin-bottom: 30vw;
                         filter: grayscale(1);
                     }
                     p{
